# vigil

./: .env.example  .eslintrc.cjs  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CTO_Agent_factory.md  README.md  WHATSNEW.md  _fix.py  manifest.json  package-lock.json  package.json  playwright.config.ts  pyproject.toml  start.ps1  start.sh  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.test.json  vercel.json  vigil.config.json  vite.config.ts  vite.config.ts.timestamp-1771851294690-257d8d2eb5bdd.mjs  vitest.config.ts
.claude/: GUIDE.md  launch.json  settings.json  settings.local.json
.claude/commands/: cpto.md  cto.md  design-review.md  dev-dashboard.md  dev-devops.md  dev-ext.md  dev-qa.md  dev-server.md  dev-ux.md  dev.md  e2e.md  gbu.md  plan.md  regression.md  release-gate.md  sprint-kickoff.md  sprint-report.md  test.md
.claude/hooks/: reinject_context.py
.claude/roles/: aria_ux.md
.claude/skills/: sprint-team-launch.md
.claude/state/: session-state.template.md
.github/workflows/: ci.yml
.windsurf/rules/: 00_repo_entrypoint.md  00_synaptix_ops.md  01_artifact_paths.md  02_templates_policy.md  10_module_agent_permissions.md  20_context_router.md  role_backend_dev.md  role_cpo.md  role_cto.md  role_extension_dev.md  role_frontend_dev.md  role_ml_dev.md  role_shared_dev.md
.windsurf/workflows/: refine-record.md  refine-review.md
_global/: README.md  windsurf_global_rules.md
api/: index.ts
backend/: AGENTS.md
demos/refine-demo-app/: package-lock.json  package.json  vite.config.ts
docs/: 00_INDEX.md  01_ARCHITECTURE.md  02_SETUP.md  03_MODULES.md  04_TESTING.md  05_DEPLOYMENT.md  0k_PRD.md  0l_DECISIONS.md
docs/knowledge/: 00_DISCUSSION_SUMMARY.md
docs/sprints/: README.md
docs/templates/: CHANGELOG_TEMPLATE.md  SECURITY_TEMPLATE.md  module_AGENTS_TEMPLATE.md  xx_DECISIONS.md  xx_PRD.md
docs/ui/: UI_KIT.md  VIGIL_UI_KIT.html
frontend/: AGENTS.md
ml-ai-data/: AGENTS.md
scripts/: audit_repo_structure.py  health_check.ps1
shared/: AGENTS_.md  role_be_example.md
src/background/: AGENTS.md  keep-alive.ts  message-handler.ts  screenshot.ts  service-worker.ts  session-manager.ts  shortcuts.ts
src/content/: AGENTS.md  action-extractor.ts  annotation-canvas.ts  annotation-state.ts  content-script.ts  inspector.ts  recorder.ts  safe-message.ts  selector-engine.ts
src/core/: AGENTS.md  compression.ts  dashboard-generator.ts  db.ts  playwright-codegen.ts  publish.ts  replay-bundler.ts  report-generator.ts  zip-bundler.ts
src/new-session/: new-session.html  new-session.tsx
src/options/: options.html  options.tsx
src/popup/: AGENTS.md  App.tsx  index.tsx  popup.css  popup.html
src/replay-viewer/: replay-viewer.html  replay-viewer.tsx
src/reporter/: refine-reporter.ts
src/shared/: AGENTS.md  constants.ts  index.ts  messages.ts  types.ts  utils.ts
src/sidepanel/: SidePanelApp.tsx  api.ts  sidepanel.html  sidepanel.tsx
tests/e2e/: bug-editor.spec.ts  bug-status.spec.ts  bugs-features-export.spec.ts  changelog-viewer.spec.ts  content-script-injects.spec.ts  control-bar.spec.ts  dashboard-navigation.spec.ts  dashboard-timeline-replay.spec.ts  extension-loads.spec.ts  keyboard-shortcuts.spec.ts  missing-control-bar.spec.ts  mouse-tracking-pref.spec.ts  playwright-export.spec.ts  project-association.spec.ts  replay-viewer.spec.ts  screenshot-capture.spec.ts  session-create.spec.ts  (+4 more)
(+209 files in other folders)
